# python-cymorton

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: github-actions.yml  test.yml
src/cymorton/: __init__.py  cli.py  codec.pxd  codec.pyx
tests/: test_cymorton.py
